--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Web Content</title>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script>
-            $.get( "http://www.google.com/", function( data ) {
+            $.get( "https://www.google.com/", function( data ) {
                 console.log(data);     
             });
         </script>
