--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
         <title>Web Content</title>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script>
-            $.get( "view-source:https://www.google.com", function( data ) {
-                console.log(data);     
-            });
+//             $.get( "view-source:https://www.google.com", function( data ) {
+//                 console.log(data);     
+//             });
+            $.ajax({
+                url:"https://codepen.io/dsr/pen/LWwyap,
+                type:"GET",
+                success: function(res){
+                var text = res.responseText;
+                alert(text);
+            }
         </script>
     </head>
     <body>
