--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 //                 console.log(data);     
 //             });
             $.ajax({
-                url:"https://codepen.io/dsr/pen/LWwyap,
+                url:"https://codepen.io/dsr/pen/LWwyap",
                 type:"GET",
                 success: function(res){
                 var text = res.responseText;
