--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             xhr.onload = function() {
               console.log(this.responseXML.title);
             }
-            xhr.open("GET", "file.html");
+            xhr.open("GET", "https://google.com");
             xhr.responseType = "document";
             xhr.send();
         </script>
