--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 //             });
             
             var xhr = new XMLHttpRequest();
+            xhr.setRequestHeader('Access-Control-Allow-Origin', '*');
             xhr.onload = function() {
               console.log(this.responseXML.title);
             }
